added authentication to the controller methods